--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -21,4 +21,4 @@ rootLogger.appenderRefs = stdout
 rootLogger.appenderRef.stdout.ref = STDOUT
 #logger.com.redhat.dsevosty.level = trace
 logger.dsevosty.name = com.redhat.dsevosty
-logger.dsevosty.level = trace
+logger.dsevosty.level = debug
